fix general footer so that sports override funcitons fix header on mobile so that nav is not in logo area

--- a/sass/partials/_athletics.scss
+++ b/sass/partials/_athletics.scss
@@ -62,14 +62,16 @@
   }
 
   #main {
-    margin-bottom: -10px;
+    margin-bottom: 0;
     margin-top: 0;
     overflow: hidden;
     padding-top: 0;
-    top: -10px;
+    top: 0;
     width: 100%;
     @include bp(wide-screens) {
       padding-top: 3em;
+      top: -10px;
+      margin-bottom: -10px;
     }
   }
   .region-footer {
